--- a/CHANGELOG
+++ b/CHANGELOG
@@ -284,9 +284,6 @@ o [NSE] Improved performance of citrixlua library when handling large XML
 
 Nmap 6.45 [2014-04-11]
 
-o NOTE THAT THE CHANGELOG FOR THIS RELEASE IS INCOMPLETE.  We plan to
-  finish it soon.
-
 o Idle scan now supports IPv6. IPv6 packets don't usually come with
   fragments identifiers like IPv4 packets do, so new techniques had to
   be developed to make idle scan possible. The implementation is by
@@ -295,6 +292,18 @@ o Idle scan now supports IPv6. IPv6 packets don't usually come with
 o When doing a ping scan (-sn), the --open option will prevent down hosts from
   being shown when -v is specified. This aligns with similar output for other
   scan types. [Daniel Miller]
+
+o Fixed some syntax problems in nmap-os-db that were caused by some automated
+  merging of fingerprints (http://seclists.org/nmap-dev/2013/q4/68) [Daniel
+  Miller]
+
+o New service probes and fingerprints for Quake1, TeamSpeak3, xmlsysd,
+  Freelancer game server, All-Seeing Eye, AndroMouse, and AirHD.
+
+o Update included WinPcap to version 4.1.3 [Rob Nicholls]
+
+o [NSE] Convert many more scripts to emit structured XML output
+  (https://nmap.org/book/nse-api.html#nse-structured-output) [Daniel Miller]
 
 o [NSE] Added 24 NSE scripts from 12 authors, bringing the total up to 470.
   They are all listed at http://nmap.org/nsedoc/, and the summaries are
@@ -391,6 +400,11 @@ o [NSE] Add unicode library for decoding and encoding UTF-8, UTF-16, CP437 and
   added or skipped nulls in UTF-16 data can use this to support non-ASCII
   characters. [Daniel Miller]
 
+o Significant code and documentation cleanup effort, fixing file encodings,
+  trailing whitespace, indentation, spelling mistakes, NSEdoc formatting
+  issues, PEP 8 compliance for Python, deprecation cleanup under python -3,
+  cleanup of warnings from LLVM's AddressSanitizer.  [Daniel Miller]
+
 o [Ncat] Added support for socks5 and corresponding regression tests.
   [Marek Lucaszuk, Petr Stodulka]
 
@@ -403,6 +417,13 @@ o Added safe fd_set operations. This makes nmap fail gracefully instead of
 o [NSE] Added tls library for functions related to SSLv3 and TLS messages.
   Existing ssl-enum-ciphers, ssl-date, and tls-nextprotoneg scripts were
   updated to use this library. [Daniel Miller]
+
+o Added NSE and Zenmap unit tests to "make check" [Daniel Miller]
+
+o [NSE] Enable http-enum to use the large Nikto fingerprint database at runtime
+  if provided by the user. For licensing reasons, we do not distribute this
+  database, but the integration effort has the blessing of the Nikto folks.
+  [George Chatzisofroniou]
 
 o Updated bundled liblua from 5.2.2 to 5.2.3 (bugfix release) [Daniel Miller]
 
@@ -466,7 +487,7 @@ o Integrated all of your IPv4 OS fingerprint submissions since January
   (1,300 of them). Added 91 fingerprints, bringing the new total to 4,118.
   Additions include Linux 3.7, iOS 6.1, OpenBSD 5.3, AIX 7.1, and more.
   Many existing fingerprints were improved. Highlights:
-  http://seclists.org/nmap-dev/2013/q2/519. [David Fifield]
+  http://seclists.org/nmap-dev/2013/q2/518. [David Fifield]
 
 o Integrated all of your service/version detection fingerprints submitted
   since January (737 of them)! Our signature count jumped by 273 to 8,979.
