Add http-vuln-misfortune-cookie script. Closes #77
git-svn-id: https://svn.nmap.org/nmap@34545 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -47,7 +47,7 @@ o Integrated all of your service/version detection fingerprints submitted from
   telnet, and ftp to jute, bgp, and slurm. Highlights:
   http://seclists.org/nmap-dev/2015/q2/171 [Daniel Miller]
 
-o [NSE] Added 23 NSE scripts from 16 authors, bringing the total up to 493.
+o [NSE] Added 24 NSE scripts from 17 authors, bringing the total up to 494.
   They are all listed at http://nmap.org/nsedoc/, and the summaries are below
   (authors are listed in brackets):
 
@@ -86,6 +86,10 @@ o [NSE] Added 23 NSE scripts from 16 authors, bringing the total up to 493.
 
   + http-vuln-cve2015-1635 detects Microsoft Windows systems vulnerable to
     MS15-034. [Paulino Calderon]
+
+  + http-vuln-misfortune-cookie detects the "Misfortune Cookie" vulnerability
+    in Allegro RomPager 4.07, commonly used in SOHO routers for TR-069 access.
+    [Andrew Orr]
 
   + http-wordpress-plugins was renamed http-wordpress-enum and extended to
     enumerate both plugins and themes of Wordpress installations and their
